--- a/templates/result.html
+++ b/templates/result.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Assessment Result</title>
+    <link rel="stylesheet" href="result.css">
 </head>
 <body>
     <h2>Health Assessment Result</h2>
