--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Pet Health Assessment</title>
+    <link rel="stylesheet" href="/Pet-Health-Assessment/static/style.css">
 </head>
 <body>
     <h1>Pet Health Checker</h1>
