--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Assessment Result</title>
-    <link rel="stylesheet" href="/Pet-Health-Assessment/static/result.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='result.css') }}">
 </head>
 <body>
     <h2>Health Assessment Result</h2>
